# nvim-config

./: .gitignore  .luacheckrc  .luarc.json  .neoconf.json  .stylua.toml  .styluaignore  Dockerfile  LICENSE  README.md  docker-compose.yml  init.lua  lazy-lock.json  lazy-lock.personal.json  lazy-lock.work.json  wanted-parsers.txt
.github/workflows/: lint.yml  tree-sitter.yml
after/ftplugin/: json.lua  rust.lua  toml.lua  yaml.lua
docker/: custom.Dockerfile  lazynvim.Dockerfile  lunarvim.Dockerfile
lua/config/: autocmds.lua  cmds.lua  globals.lua  keymaps.lua  options.lua
lua/core/: autocmds.lua  bootstrap.lua  cache.lua  cmds.lua  globals.lua  lazy.lua  logger.lua  lua_globals.lua  mapper.lua  options.lua  pack.lua  utils.lua
lua/core/cache/: buffer.lua  buffers.lua  init.lua  ui-helpers.lua  ui.lua
lua/keymaps/: init.lua
lua/modules/_essentials/: config.lua  plugins.lua
lua/modules/cmp_lsp/: config.lua  plugins.lua
lua/modules/cmp_lsp/cmp/: init.lua
lua/modules/cmp_lsp/config/: _copilot.lua  _fidget.lua  _lsp_signature.lua  _lspsaga.lua  _luasnip.lua  _mason.lua  _mason_lspconfig.lua  _neodev.lua  _null_ls.lua  _nvim_autopairs.lua  _nvim_navic.lua
lua/modules/cmp_lsp/lsp/: init.lua  servers.lua  setup.lua
lua/modules/cmp_lsp/setup/: cmp.lua  copilot-cmp.lua  copilot.lua  lsp_signature.lua  lspsaga.lua  luasnip.lua  mason.lua  neodev.lua  null-ls.lua  nvim-lspconfig.lua  rust-tools.lua  typescript-tools.lua  typescript.lua
lua/modules/editor/: config.lua  plugins.lua
lua/modules/editor/config/: _accelerated_jk.lua  _auto_session.lua  _better_escape.lua  _comment.lua  _crates.lua  _dapui.lua  _diffview.lua  _illuminate.lua  _minimap.lua  _neoscroll.lua  _nvim_treesitter.lua  _package_info.lua  _project.lua  _specs.lua  _spectre.lua  _tabout.lua  _todo_comment.lua
lua/modules/editor/setup/: _dap.lua  accelerated-jk.lua  better-escape.lua  comment.lua  diffview.lua  gitsigns.lua  hover.lua  illuminate.lua  marks.lua  mini-map.lua  minimap.lua  neoscroll.lua  nvim-treesitter.lua  specs.lua  tabout.lua  todo-comments.lua  trouble.lua  (+1 more)
lua/modules/tools/: config.lua  plugins.lua
lua/modules/ui/: colorscheme.lua  config.lua  icons.lua  plugins.lua
lua/utils/: cmp.lua  colours.lua  fn.lua  fs.lua  lsp.lua
queries/lua/: highlights.scm
scripts/: compile-ts-parsers.py  requirements.txt  reset.ps1  reset.sh
scripts/compile-ts-parsers/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
scripts/git-hooks/: Cargo.toml  pre-push
scripts/git-hooks/src/: command.rs  hash.rs  lib.rs  paths.rs  renderer.rs
scripts/nvim-utils/: Cargo.toml  README.md  build.ps1  build.sh
scripts/nvim-utils/nu-git-hooks/: Cargo.toml
scripts/nvim-utils/nu-git-hooks/src/: hash.rs
scripts/nvim-utils/nu-git-hooks/test-assets/: file4.txt
scripts/nvim-utils/nu-lib/: Cargo.toml
scripts/nvim-utils/nu-lib/src/: command.rs  lib.rs  paths.rs  renderer.rs
scripts/nvim-utils/nu-ts-parsers/: Cargo.toml
scripts/nvim-utils/nu-ts-parsers/src/: cleanup.rs  cli.rs  compile_utils.rs  fs.rs  lib.rs  main.rs  parsers.rs
scripts/nvim-utils/nu-ts-parsers/src/subcommands/: compile.rs  compile_local.rs  download.rs  mod.rs  subcommand.rs
scripts/ts-parsers/: .prettierrc.yml  esbuild.mjs  package.json  pnpm-lock.yaml  tsconfig.json
scripts/ts-parsers/src/: compile-local.ts  compile.ts  constants.ts  download.ts
snippets/: lua.json  package.json  yaml.json
(+49 files in other folders)
