[package]
name = "git-hooks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"

[[bin]]
name = "pre-commit"

[[bin]]
name = "post-merge"

[dependencies]
dirs = "5.0.1"
hex = "0.4.3"
home = "0.5.5"
jwalk = "0.8.1"
num_cpus = "1.16.0"
ring = "0.16.20"
self-replace = "1.3.6"
tokio = { version = "1.32.0", features = [
   "rt-multi-thread",
   "sync",
   "fs",
   "io-util",
   "io-std",
   "macros",
] }
