[package]
name = "git-hooks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"

[[bin]]
name = "pre-commit"

[[bin]]
name = "post-merge"

[profile.release]
opt-level = 3

[dependencies]
ansi_term = "0.12.1"
bytes = "1.5.0"
crossterm = "0.27.0"
dirs = "5.0.1"
hex = "0.4.3"
home = "0.5.5"
jwalk = "0.8.1"
num_cpus = "1.16.0"
ring = "0.16.20"
self-replace = { git = "https://github.com/KevinSilvester/self-replace.git" }
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.32.0", features = [
   "rt-multi-thread",
   "sync",
   "fs",
   "io-util",
   "io-std",
   "macros",
   "time"
] }
tokio-process-stream = "0.4.0"
tokio-stream = "0.1.14"
