[package]
name = "nu-git-hooks"
version = "0.1.0"
edition = { workspace = true }

[[bin]]
name = "bootstrap"

[[bin]]
name = "post-merge"

[[bin]]
name = "pre-push"

[dependencies]
anyhow = { workspace = true }
cfg-if = { workspace = true }
hex = "0.4.3"
jwalk = "0.8.1"
nu-lib = { path = "../nu-lib" }
num_cpus = "1.16.0"
ring = "0.16.20"
self-replace = { git = "https://github.com/KevinSilvester/self-replace.git" }
tokio = { version = "1.32.0", features = [
   "rt-multi-thread",
   "macros",
   "sync",
   "fs",
   "io-util",
   "io-std",
] }
tokio-stream = "0.1.14"
