[package]
name = "nu-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
cfg-if = "1.0.0"
crossterm = "0.27.0"
dirs = "5.0.1"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.32.0", features = [
   "sync",
   "io-util",
   "io-std",
   "macros",
] }
tokio-process-stream = "0.4.0"
tokio-stream = "0.1.14"
