[package]
name = "nu-lib"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
ansi_term = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
crossterm = "0.27.0"
dirs = "5.0.1"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.32.0", features = [
   "sync",
   "io-util",
   "io-std",
   "macros",
] }
tokio-process-stream = "0.4.0"
tokio-stream = "0.1.14"
