[package]
name = "nu-ts-parsers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ts-parsers"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["clock"] }
clap = { version = "4.4.4", features = ["derive"] }
dirs = "5.0.1"
fs_extra = "1.3.0"
glob = "0.3.1"
hex = "0.4.3"
lazy_static = "1.4.0"
nu-lib = { path = "../nu-lib" }
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { vesion = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "signal",
] }
